CMS7-7550: Improvement on CMS7 - 7535: The last item checkbox in the referring documents dialog can not be activated  - Added marker className to doclisting-name column  - Added 100% width to the header of the doclisting-name column to ensure it is always the same width. If we leave this out, the first column containing the checkbox will take more width than intended if there is no document name that overflows the doclisting-name cells.  - Set width of 'tr.hippo-list-paging td' to be 75em which forces the paging widget to always align completely to the right, even in the big dialog of the 'Schedule take offline...' action.

--- a/cms/api/src/main/resources/skin/screen.css
+++ b/cms/api/src/main/resources/skin/screen.css
@@ -1,12 +1,12 @@
 /*
  * Copyright 2008-2013 Hippo B.V. (http://www.onehippo.com)
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *  http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -552,15 +552,12 @@ body.hippo-root #doc3 {
 }
 
 .hippo-list-paging .paging-label {
-  margin-top: 0px;
-  padding-top: 0px;
   color: #000;
 }
 
 .hippo-list-details tr.hippo-list-paging td {
-  width: 630px;
+  width: 75em;
   text-align: right;
-  padding-top: 0px;
 }
 
 .hippo-list-details .hippo-list-paging td {
@@ -2213,9 +2210,12 @@ body.hippo-root div.yui-log-container {
 	font-weight: bold;
 }
 
-.hippo-referring-documents-list .link {
+.hippo-referring-documents-list th.doclisting-name {
+    width: 100%;
+}
+
+.hippo-referring-documents-list td.doclisting-name span {
     display: block;
-    height: 16px;
+    height: 14px;
     overflow: hidden;
-    float: left;
 }
